--- a/public/css/main.css
+++ b/public/css/main.css
@@ -536,6 +536,10 @@ img.skewed {
     text-align: right;
 }
 
+.color-coded span.dnf {
+    font-variant: all-petite-caps;
+}
+
 .color-coded a {
     align-self: center;
     border: 2px solid;
